# ce-drive

./: Cargo.toml  README.md  ceapp.toml
.github/workflows/: ci.yml
crates/ce-drive-cli/: Cargo.toml
crates/ce-drive-cli/src/: main.rs
crates/ce-drive-core/: Cargo.toml
crates/ce-drive-core/src/: content.rs  drive.rs  lib.rs  share.rs  store.rs  sync.rs  tree.rs
crates/ce-drive-core/tests/: content_proptest.rs  live_store.rs  share_proptest.rs  tree_proptest.rs  two_node_sync.rs
crates/ce-drive-mount/: Cargo.toml
crates/ce-drive-mount/src/: lib.rs  macos_fskit.rs  store_iface.rs  vfs.rs  windows.rs
crates/ce-drive-wasm/: Cargo.toml
crates/ce-drive-wasm/src/: crdt.rs  lib.rs
