[package]
name = "ce-drive-core"
version = "0.1.0"
edition = "2024"
description = "CE Drive core — the Kleppmann move-CRDT directory tree, content-addressed chunked storage, capability sharing, durability, and audit. A pure library over CE primitives (ce-coord, ce-rs, ce-cap, rdev::chunk). Compiles to WASM."
license = "AGPL-3.0-only"
repository = "https://github.com/ce-net/ce-drive"

[lib]
name = "ce_drive_core"
path = "src/lib.rs"

[dependencies]
# --- CE substrate (siblings in the ~/ce-net workspace; by path) ---
ce-rs = { git = "https://github.com/ce-net/ce-rs" }                      # blob/object data layer + mesh transport
ce-coord = { git = "https://github.com/ce-net/ce-coord" }                # Replicated<S> / StateMachine engine
ce-cap = { git = "https://github.com/ce-net/ce" }          # capability verifier (sharing/authorization)
ce-identity = { git = "https://github.com/ce-net/ce" } # Ed25519 identity (workspace root key)
rdev = { git = "https://github.com/ce-net/rdev" }                        # the chunk/CID delta engine (chunk + delta)

# --- async + error + serde ---
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
hex = "0.4"
sha2 = "0.10"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
proptest = "1"
ce-identity = { git = "https://github.com/ce-net/ce" }
# The two-node sync integration test boots real nodes and fetches /bootstrap over HTTP. Same feature
# set as ce-rs so the reqwest build unifies.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
